--- a/biodata.html
+++ b/biodata.html
@@ -23,6 +23,7 @@
             <li>Desain (PhotoShop)</li> 
             <li>Google (Drive, Docs, Spreadsheet, Slide)</li>
             <li>Bisa Bekerja Sama Dengan Tim</li>
+            <li>Business Marketing</li>
         <ul>
         <h2>Kontak Saya</h2>
         <a href="https://intagram.com/auw-caa"> Instagram</a>
