add placeholder name

--- a/table.html
+++ b/table.html
@@ -13,7 +13,7 @@
 
     <form>
         <p>Nama :</p>
-        <input type="text" name="nama">
+        <input type="text" name="nama" placeholder="Enter Your Name">
         <p>Kelompok:</p>
         <input type="radio" name="kelompok" id="BaliWangi">
         <label for="BaliWangi">Bali</label>
@@ -21,10 +21,7 @@
         <label for="BaliWangi">Banyuwangi</label>
         <input type="radio" name="kelompok" id="BaliWangi">
         <label for="BaliWangi">BaliWangi</label>
-        <div>
-            <input type="submit" value="Kirim">
-            <input type="reset" value="Reset">
-        </div>
+        
     </form>
 
     <br>
