add inicial commit

--- a/portofolio.html
+++ b/portofolio.html
@@ -9,8 +9,8 @@
 <body>
     <!-- Judul -->
     <h1>Portofolio (Pengalaman) Saya</h1>
-    <h2>Martasya Dwi Pramesty</h2>
-    <img src="Caimg.jpeg"> alt="Trulli" width="500" height="333"</p>
+    <h2><td>Martasya Dwi Pramesty</h2></td>
+    <img src="Caimg.jpeg"> alt="Caimg" width="500" height="333"</p>
 
     <br>
 
@@ -62,7 +62,7 @@
             <li>2020-Sekarang       Universitas Udayana (Antropologi)</li></td>
     </tr>
     <tr>
-        <th>Experience</th>
+        <th>Research and Experience</th>
         <th>Organizations Experience</th>
     </tr>
     <tr>
@@ -73,6 +73,10 @@
         <p><li> Bendahara - Kim Aristoteles Fakultas Ilmu Budaya (October 2021 - now)</li></p>
         <p><li> Anggota Sie Konsumsi - Penelitian Pengabdian Masyarakat 2022 Antropologi Unud (october 2021 - now)</li></p>
         <p><li> Anggota divisi komunikasi & informasi - Kim Aristoteles Fakultas Ilmu Budaya (agust 2020-february 2021)</li></p>
+        <p><li> Penelitian dan analisis sistem teknologi pada proses pembuatan 
+            Anyaman di masyarakat Desa Pedawa (Buleleng, Februari 2021)
+        <p><li>Penelitian dan analisis sistem bahasa pada pemandu wisata, peningkatan kualitas 
+            pariwisata di masyarakat Desa senggigi (Pulau Lombok, Maret 2021)</li></p></td>
         </td>
         <td>
         <ul>
@@ -101,24 +105,44 @@
             Mahasiswa (PKM). Saya bekerja untuk mengkoordinasikan dan mengelola pendapatan keuangan dan pengeluaran pelatihan, 
             pembukuan keuangan. Bertanggung jawab untuk operasi sehari-hari toko menyediakan layanan pelanggan dengan menyapa dan membantu pelanggan dengan.</li></p>
         </ul></td>
-    </tr>
-    <tr>
-        <th>Research Experience</th>
-        <th>Pengalaman</th>
-    </tr>
-    <tr>
-        <td>
-        <p><li> Penelitian dan analisis sistem teknologi pada proses pembuatan 
-            Anyaman di masyarakat Desa Pedawa (Buleleng, Februari 2021)
-        <p><li>Penelitian dan analisis sistem bahasa pada pemandu wisata, peningkatan kualitas 
-            pariwisata di masyarakat Desa senggigi (Pulau Lombok, Maret 2021)</li></p></td>
-        <td>Martasya Dwi Pramesty</p></li>
-    </tr>
-    <tr>
+
     </table>
+
     <br>
+
+    <table border="3">
+        <tr>
+            <th>Media Contacts :</th>
+        </tr>
+        <tr>
+            <td><li><a href="https://intagram.com/auw-caa"> Instagram</a></li>  
+                <li><a href="https://wa.me/082292170561"> WhatsApp</a></li>
+                <li><a href="https://t.me/082340809894"> Telegram</a></li>
+                <li><a href="https://id-id.facebook.com/Tasya Ca"> Facebook</a></li>
+            </td>
+        </tr>
+    </table>
+
+    <br>
+
+    
+
     <div>
+        <form>
+            <p>Nama: </p>
+            <input type="text" name="nama" placeholder="Enter Your Name">
+            <p>Kelompok: </p>
+            <input type="radio" name="kelompok" id="BaliWangi">
+            <label for="BaliWangi">BaliWangi</label>
+            <p>Komentar: </p>
+            <input type="text" name="nama" placeholder="Enter Your Comments">
+            <p>Saran: </p>
+            <input type="text" name="nama" placeholder=" Enter Your Suggestions">
+        </form>
+        <br>
+        <div>
         <input type="submit" value="Kirim">
         <input type="reset" value="Reset">
+        </div>
 </body>
 </html>
