--- a/portofolio.html
+++ b/portofolio.html
@@ -17,9 +17,13 @@
         table, tr, td, th {
             border: 1px solid goldenrod;
         }
+        .paragraf {
+            color: black;
+        }
     </style>
 
     <!-- no, nama, kelompok -->
+    <p class="paragraf">which lists all git commits by pretending that all objects mentioned by reflogs (get reflogs) are listed on the command Line as <commit>.</commit></p>
     <table border="3">
     <tr>
         <th>My Background</th>
