--- a/portofolio.html
+++ b/portofolio.html
@@ -18,12 +18,12 @@
             border: 1px solid goldenrod;
         }
         .paragraf {
-            color: black;
+            color: rgb(108, 86, 30);
         }
     </style>
 
     <!-- no, nama, kelompok -->
-    <p class="paragraf">which lists all git commits by pretending that all objects mentioned by reflogs (get reflogs) are listed on the command Line as <commit>.</commit></p>
+    <p class="paragraf">which lists all git commits by pretending that all objects mentioned by reflogs (get reflogs) are listed on the command Line as <commit></commit></p>
     <table border="3">
     <tr>
         <th>My Background</th>
