--- a/portofolio.html
+++ b/portofolio.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Membuat Portofolio (Pengalaman) Tentang Saya</title>
+    <title>Membuat Portofolio (Pengalaman)</title>
 </head>
 <body>
-    <!-- Judul -->
-    <h1>Portofolio (Pengalaman) Saya</h1>
+    <!-- menu -->
+        <a href="index.html">Biodata</a>
+        <a href="">Portofolio</a>
+
+    <!-- Content -->
+    <h1>Portofolio (Pengalaman)</h1>
     <h2><td>Martasya Dwi Pramesty</h2></td>
-    <img src="Caimg.jpeg"> alt="Caimg" width="500" height="333"</p>
+    <img src="Caimg.jpeg" alt="Caimg" width="200" height="333"/>
+    <!-- <img src="../PHP/Caimg.jpeg" width="200"> -->
 
     <br>
     <style>
